# aruco

./: CMakeLists.txt  package.xml
src/: dictionary.cpp
src/markerlabelers/: dictionary_based.cpp
utils_markermap/: pcdwriter.cpp
